--- a/app/src/main/res/layout/activity_add_book.xml
+++ b/app/src/main/res/layout/activity_add_book.xml
@@ -1,22 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+  ~ Copyright (c) 2018. all rights are reserved to the authors of this project,
+  unauthorized use of this code in other projects may result in legal complications.
+  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
+
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".AddBookActivity">
+    tools:context=".activity.AddBookActivity">
 
     <include
         android:id="@+id/include"
         layout="@layout/toolbar"
         android:layout_marginBottom="8dp"
-        app:layout_constraintBottom_toTopOf="@+id/scrollView2"
+        app:layout_constraintBottom_toTopOf="@+id/scrollViewAdd"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"></include>
 
+    <ProgressBar
+        android:id="@+id/progressBarAdd"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:visibility="gone" />
+
     <ScrollView
-        android:id="@+id/scrollView2"
+        android:id="@+id/scrollViewAdd"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginStart="8dp"
@@ -77,7 +89,7 @@
                 android:textColor="@android:color/black" />
 
             <EditText
-                android:id="@+id/edit_text_livro_nome"
+                android:id="@+id/edit_text__add_livro_nome"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:ems="10"
@@ -92,7 +104,7 @@
                 android:textColor="@android:color/black" />
 
             <EditText
-                android:id="@+id/edit_text_livro_autor"
+                android:id="@+id/edit_text_add_livro_autor"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:ems="10"
@@ -107,7 +119,7 @@
                 android:textColor="@android:color/black" />
 
             <EditText
-                android:id="@+id/edit_text_livro_categoria"
+                android:id="@+id/edit_text_add_livro_categoria"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:ems="10"
@@ -122,7 +134,7 @@
                 android:textColor="@android:color/black" />
 
             <EditText
-                android:id="@+id/edit_text_livro_editora"
+                android:id="@+id/edit_text_add_livro_editora"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:ems="10"
@@ -137,7 +149,7 @@
                 android:textColor="@android:color/black" />
 
             <EditText
-                android:id="@+id/edit_text_livro_ano"
+                android:id="@+id/edit_text_add_livro_ano"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:ems="10"
@@ -171,7 +183,7 @@
                 android:orientation="vertical">
 
                 <RadioGroup
-                    android:id="@+id/radio_group_area"
+                    android:id="@+id/radio_group_area_add"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent">
 
