--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,5 +8,7 @@
         <color name="secondary_text">#757575</color>
         <color name="icons">#212121</color>
         <color name="divider">#BDBDBD</color>
+        <color name="red">#ff0000</color>
+        <color name="green">#26ff00</color>
 </resources>
 
