--- a/app/src/main/res/layout/recycler_cell.xml
+++ b/app/src/main/res/layout/recycler_cell.xml
@@ -4,8 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:layout_marginTop="2dp"
-    android:layout_marginBottom="2dp"
     app:cardBackgroundColor="@color/cardview_dark_background"
     app:cardCornerRadius="2dp"
     app:cardElevation="3dp"
@@ -39,7 +37,7 @@
 
                 <ImageView
                     android:id="@+id/imagemview_list"
-                    android:layout_width="130dp"
+                    android:layout_width="150dp"
                     android:layout_height="200dp"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
@@ -60,16 +58,13 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="5dp"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="136dp"
             android:layout_marginEnd="5dp"
-            android:layout_marginBottom="8dp"
             android:background="@color/primary_dark"
             android:orientation="vertical"
-            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/linearLayout2"
-            app:layout_constraintVertical_bias="1.0">
+            app:layout_constraintTop_toTopOf="@+id/linearLayout2">
 
             <TextView
                 android:id="@+id/text_nome_livro_list"
