--- a/app/src/main/res/layout/activity_category_edit.xml
+++ b/app/src/main/res/layout/activity_category_edit.xml
@@ -37,7 +37,7 @@
             android:layout_marginTop="32dp"
             android:layout_marginEnd="148dp"
             android:layout_marginBottom="85dp"
-            android:text="Button"
+            android:text="Concluir"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
