--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -16,7 +16,7 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context=".activity.LoginActivity">
 
-    <!-- Login progress -->
+    <!-- L progress -->
     <ProgressBar
         android:id="@+id/login_progress"
         style="?android:attr/progressBarStyleLarge"
