--- a/app/src/main/res/layout/activity_transicao.xml
+++ b/app/src/main/res/layout/activity_transicao.xml
@@ -1,11 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_margin="10dp"
-    android:gravity="center_vertical|center_horizontal"
-    tools:context=".activity.OpenBookActivity">
+    tools:context=".activity.TransicaoActivity">
 
-</LinearLayout>
+</android.support.constraint.ConstraintLayout>
